fhir/6.0.0/POST_PlanDefinition_apply.md
# POST Plan Definition Apply - eHealth Infrastructure v6.0.0

* [**Table of Contents**](toc.md)
* **POST Plan Definition Apply**

## POST Plan Definition Apply

`POST [base]/PlanDefinition/521/$apply`

**Header**

```
Authorization: Bearer eyJhbGciOiJub25lIn0.eyJ1c2VyX2lkIjoiZGEzYWNkMTItZWQxMy00OGRiLWI0ZWMtNTFhMWI4ZmYwODljIiwicmVhbG1fYWNjZXNzIjp7InJvbGVzIjpbIlBsYW5EZWZpbml0aW9uJGFwcGx5Il19LCJjb250ZXh0Ijp7Im9yZ2FuaXphdGlvbl9pZCI6Imh0dHBzOi8vb3JnYW5pemF0aW9uLmNpdC1wbGFuLTIxMTEubG9jYWwvZmhpci9Pcmdhbml6YXRpb24vMTI2MTciLCJjYXJlX3RlYW1faWQiOiJodHRwczovL29yZ2FuaXphdGlvbi5jaXQtcGxhbi0yMTExLmxvY2FsL2ZoaXIvQ2FyZVRlYW0vMTI3NTIiLCJlcGlzb2RlX29mX2NhcmVfaWQiOiJodHRwczovL2NhcmVwbGFuLmNpdC1wbGFuLTIxMTEubG9jYWwvZmhpci9FcGlzb2RlT2ZDYXJlLzczNzIwIiwicGF0aWVudF9pZCI6Imh0dHBzOi8vcGF0aWVudC5jaXQtcGxhbi0yMTExLmxvY2FsL2ZoaXIvUGF0aWVudC81OTIxOSIsInRlYW1fb25fZW9jIjpmYWxzZX0sInVzZXJfdHlwZSI6IlBBVElFTlQifQ.
Accept: application/fhir+json;q=1.0, application/json+fhir;q=0.9
User-Agent: HAPI-FHIR/8.0.0 (FHIR Client; FHIR 4.0.1/R4; apache)
Accept-Encoding: gzip
Content-Type: application/fhir+json; charset=UTF-8

```

**Body**:

```
{
  "resourceType": "Parameters",
  "parameter": [
    {
      "name": "episodeOfCare",
      "valueReference": {
        "reference": "https://careplan.cit-plan-2111.local/fhir/EpisodeOfCare/73720"
      }
    }
  ]
}

```

**Response**

```
{
  "resourceType": "CarePlan",
  "id": "31627",
  "meta": {
    "versionId": "1",
    "lastUpdated": "2025-10-21T11:17:44.633+00:00",
    "profile": [
      "http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-careplan"
    ]
  },
  "extension": [
    {
      "url": "http://hl7.org/fhir/StructureDefinition/workflow-episodeOfCare",
      "valueReference": {
        "reference": "https://careplan.cit-plan-2111.local/fhir/EpisodeOfCare/55195"
      }
    },
    {
      "url": "http://ehealth.sundhed.dk/fhir/StructureDefinition/ehealth-careplan-statusHistory",
      "extension": [
        {
          "url": "status",
          "valueCodeableConcept": {
            "coding": [
              {
                "system": "http://hl7.org/fhir/request-status",
                "code": "draft"
              }
            ]
          }
        },
        {
          "url": "period",
          "valuePeriod": {
            "start": "2025-10-21T11:17:44+00:00"
          }
        }
      ]
    }
  ],
  "instantiatesCanonical": [
    "https://plan.cit-plan-2111.local/fhir/PlanDefinition/522/_history/1"
  ],
  "status": "draft",
  "intent": "option",
  "category": [
    {
      "coding": [
        {
          "system": "http://ehealth.sundhed.dk/cs/careplan-category",
          "code": "TBD"
        }
      ]
    }
  ],
  "subject": {
    "reference": "https://patient.cit-plan-2111.local/fhir/Patient/28235"
  },
  "period": {
    "start": "1970-01-01T00:00:01+00:00",
    "end": "1970-01-01T00:01:40+00:00"
  },
  "addresses": [
    {
      "reference": "https://careplan.cit-plan-2111.local/fhir/Condition/24513"
    }
  ]
}

```

